refactor(util): Nameparser가 String 리스트를 리턴하도록 수정