@@ -7,12 +7,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class NameParser {
-    public static Players makeNameList(String input) {
-        List<Player> playerList = Arrays.stream(input.split(","))
-                .map(String::trim)
-                .map(Player::new)
-                .collect(Collectors.toList());
-
-        return new Players(playerList);
+    public static List<String> makeNameList(String input) {
+        return Arrays.stream(input.split(","))
+                .map(String::trim).toList();
     }
 }
